# TradeWatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: tradewatch_etl.py
config/: detection_rules.yaml
databricks/: job.json  tradewatch_batch_job.py
docs/: ARCHITECTURE.md  DATA_PLATFORM.md  SDS.md  SECURITY.md  SRS.md
examples/: generate_history.py  integrate_via_http.py  kafka_producer.py  quickstart.py
hadoop/: README.md  hadoop.env  mapper.py  reducer.py  run_local.sh  run_streaming.sh
scripts/: batch_loop.sh  run_stack.ps1  run_stack.sh  smoke_test.py
spark/: batch_backtest.py  detection_sql.py  streaming_job.py
src/tradewatch/: __init__.py  benchmark.py  cli.py  config.py  engine.py  evaluate.py  guardrails.py  metrics.py  models.py  observability.py  pipeline.py  platform_health.py  windows.py
src/tradewatch/api/: __init__.py  app.py  dashboard.html  security.py
src/tradewatch/detectors/: __init__.py  base.py  ml_isolation.py  price_spike.py  spoofing.py  velocity.py  volume_spike.py  wash_trade.py  zscore.py
src/tradewatch/sinks/: __init__.py  base.py  console.py  file.py  websocket.py
src/tradewatch/sources/: __init__.py  base.py  kafka_source.py  simulator.py
tests/: conftest.py  test_api.py  test_detectors.py  test_engine.py  test_hadoop.py  test_metrics.py  test_models.py  test_security.py  test_simulator.py  test_windows.py
warehouse/hive/: schema.hql
warehouse/snowflake/: load_snowflake.py  schema.sql
