[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradewatch"
version = "1.0.0"
description = "Real-Time Trade Anomaly Detection Engine — streaming detection of market-abuse and data-quality anomalies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PerinbaBuilds" }]
keywords = ["fintech", "anomaly-detection", "trading", "surveillance", "streaming", "fraud", "market-abuse"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
kafka = ["aiokafka>=0.10"]
spark = ["pyspark>=3.5", "pyarrow>=14", "pandas>=2.0"]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.26",
  "ruff>=0.3",
]

[project.scripts]
tradewatch = "tradewatch.cli:main"

[project.urls]
Homepage = "https://github.com/PerinbaBuilds/real-time-trade-anomaly-detection-engine"
Repository = "https://github.com/PerinbaBuilds/real-time-trade-anomaly-detection-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tradewatch = ["api/dashboard.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
